@@ -44,6 +44,7 @@ Improvements::
 * upgrade prawn-svg to 0.36 to fix dependencies, improve gradient support, and support additional properties; disable experimental warnings when requiring prawn-svg on Ruby 2.7 (#2551)
 * remove shy hyphens from text in log message when formatted text cannot be parsed (#2599)
 * clear float box if next block falls outside of flaot group (#2596)
+* resolve fonts relative to theme dir before GEM_FONTS_DIR if `pdf-fontsdir` not specified (#2349)
 
 Bug Fixes::
 
